[package]
name = "gm_turbostroi_rust"
version = "3.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = {version = "0.7.4", features = ["module", "luajit", "macros"]}
lazy_static = "1.4.0"
winapi = {version = "0.3.9", features = ["winbase", "processthreadsapi", "basetsd"]}
libc = "0.2.124"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'